--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 	<header id="header" class="mt-4">
 		<div class="container-fluid">
 			<a href="index.html" class="logo">
-				<img src="images/logo.svg" alt="logo">
+				<img src="images/logo.jpg" style="width:30%" alt="logo">
 			</a>
 		</div>
 	</header>
@@ -489,7 +489,7 @@
 				<div class="col-md-4 offset-md-2 text-start text-md-end">
 					<div class="mb-4">
 						<a href="index.html">
-							<img src="images/logo-light.svg" alt="logo">
+							<img src="images/logo.jpg" style="width:45%" alt="logo">
 						</a>
 					</div>
 					<p>Gravida massa volutpat aenean odio. Amet, turpis erat nullam fringilla elementum diam in. Nisi,
@@ -547,7 +547,7 @@
 			<div class="border-top py-4">
 				<div class="row">
 					<div class="col-md-6">
-						<p>© Copyright 2023 Salone. All rights reserved.</p>
+						<p>© Copyright 2023 Don Color. Reservados todos los derechos.</p>
 					</div>
 					<div class="col-md-6 text-start text-md-end">
 						<p>HTML Template by <a href="https://templatesjungle.com" target="_blank">TemplatesJungle</a></p>
