--- a/index.html
+++ b/index.html
@@ -154,30 +154,30 @@
 			</symbol>
 		</defs>
 	</svg>
-
+	
+	
 	<div class="nav nav-overlay">
 		<div class="nav__content">
 			<ul class="nav__list">
-				<li class="nav__list-item active-nav"><a href="https://templatesjungle.gumroad.com/l/salone-beauty-salon-template" class="hover-target"><span class="display-3">Home</span></a></li>
-				<li class="nav__list-item"><a href="https://templatesjungle.gumroad.com/l/salone-beauty-salon-template" class="hover-target"><span class="display-3">About</span> <span
-							class="badge bg-primary text-white fs-6">PRO</span></a></li>
-				<li class="nav__list-item"><a href="https://templatesjungle.gumroad.com/l/salone-beauty-salon-template" class="hover-target"><span class="display-3">Contact</span> <span
-							class="badge bg-primary text-white fs-6">PRO</span></a></li>
-				<li class="nav__list-item"><a href="https://templatesjungle.gumroad.com/l/salone-beauty-salon-template" class="hover-target"><span class="display-3">Blog</span> <span
-							class="badge bg-primary text-white fs-6">PRO</span></a></li>
-				<li class="nav__list-item"><a href="https://templatesjungle.gumroad.com/l/salone-beauty-salon-template" class="hover-target"><span class="display-3">Single</span> <span
-							class="badge bg-primary text-white fs-6">PRO</span></a></li>
-				<li class="nav__list-item"><a href="https://templatesjungle.gumroad.com/l/salone-beauty-salon-template" class="hover-target"><span class="display-3">Styles</span> <span
-							class="badge bg-primary text-white fs-6">PRO</span></a></li>
-				<li class="nav__list-item"><a href="https://templatesjungle.gumroad.com/l/salone-beauty-salon-template" target="_blank" class="btn btn-outline-primary px-4"><span class="fs-6">Get PRO version</span></a></li>
+				<!-- <li class="nav__list-item active-nav"><a href="#" class="hover-target"><span class="display-3">Inicio</span></a></li> -->
+				<li class="nav__list-item"><a href="#" class="hover-target"><span class="display-3">Inicio</span></a></li>
+				<li class="nav__list-item"><a href="#nosotros" class="hover-target"><span class="display-3">Sobre nosotros</span> <span
+							class="badge bg-primary text-white fs-6"></span></a></li>
+				<li class="nav__list-item"><a href="#contacto" class="hover-target"><span class="display-3">Contacto</span> <span
+							class="badge bg-primary text-white fs-6"></span></a></li>
+				<li class="nav__list-item"><a href="#FAQ" class="hover-target"><span class="display-3">Preguntas frecuentes</span> <span
+							class="badge bg-primary text-white fs-6"></span></a></li>
+				<li class="nav__list-item"><a href="#servicios" class="hover-target"><span class="display-3">Servicios</span> <span
+							class="badge bg-primary text-white fs-6"></span></a></li>
 			</ul>
 		</div>
 	</div>
-
+	
 	<header id="header" class="mt-4">
-		<div class="container-fluid">
+		<div class="container-fluid col-md-6 col-sm-12">
 			<a href="index.html" class="logo">
-				<img src="images/logo.jpg" style="width:30%" alt="logo">
+				<!-- <img src="images/logo.jpg" style="width:30%" alt="logo"> -->
+				<img src="images/logo_1.jpg" style="width:80%" alt="logo">
 			</a>
 		</div>
 	</header>
@@ -188,8 +188,9 @@
 		<span></span>
 		</label>
 	</nav>
+	
 
-	<section id="billboard" class="py-1 py-md-5">
+	<section id="nosotros" class="py-1 py-md-5">
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-md-4">
@@ -208,7 +209,7 @@
 		</div>
 	</section>
 
-	<section id="features" class="py-1 my-1 py-md-5 my-md-5" data-bs-theme="dark">
+	<section id="servicios" class="py-1 my-1 py-md-5 my-md-5" data-bs-theme="dark">
 		<div class="container">
 			<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 g-5 m-2 m-md-0 p-2 p-md-5 bg-black">
 				<div class="col m-0">
@@ -366,7 +367,7 @@ Recomiendo ir a tod@S, si quieren recibir un trato agradable y salir content@s ‚
 		</div>
 	</section>
 
-	<section id="blog" class="latest-blogs py-2 py-md-5">
+	<section id="FAQ" class="latest-blogs py-2 py-md-5">
 		<div class="container-fluid">
 			<div class="row">
 				<div class="section-header text-center my-5">
@@ -427,7 +428,7 @@ Recomiendo ir a tod@S, si quieren recibir un trato agradable y salir content@s ‚
 		</div>
 	</section>
 
-	<section class="bg-secondary py-5">
+	<section id="contacto" class="bg-secondary py-5">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 offset-md-2">
@@ -455,30 +456,30 @@ Recomiendo ir a tod@S, si quieren recibir un trato agradable y salir content@s ‚
 						<h5 class="widget-title mb-4">Accesos r√°pidos</h5>
 						<ul class="menu-list list-unstyled fs-6">
 							<li class="menu-item">
-								<a href="#" class="item-anchor" style="color:white">Nosotros</a>
+								<a href="#nosotros" class="item-anchor" style="color:white">Nosotros</a>
 							</li>
 							<li class="menu-item">
-								<a href="#" class="item-anchor">Servicios</a>
+								<a href="#servicios" class="item-anchor" style="color:white">Servicios</a>
 							</li>
 							<li class="menu-item">
-								<a href="#" class="item-anchor">Contacto</a>
+								<a href="#contacto" class="item-anchor" style="color:white">Contacto</a>
 							</li>
 							<li class="menu-item">
-								<a href="faqs.html" class="item-anchor">Preguntas frecuentes</a>
+								<a href="#FAQ" class="item-anchor" style="color:white">Preguntas frecuentes</a>
 							</li>
 						</ul>
 					</div>
 				</div>
-				<div class="col-md-4 offset-md-2 text-start text-md-end">
+				<div class="col-md-2 offset-md-2 text-start text-md-end">
 					<div class="mb-4">
 						<a href="index.html">
-							<img src="images/logo.jpg" style="width:45%" alt="logo"> 
+							<img src="images/logo.jpg" style="width:100%" alt="logo"> 
 						</a>
 					</div>
 					<p>Un aut√©ntico servicio profesional muy cerca de ti</p>
 
 					<ul class="list-unstyled">
-						<li><a href="mailto:doncolor2017@gmail.com">doncolor2017@gmail.com</a></li>
+						<li><a href="mailto:doncolor2017@gmail.com"  style="color:white">doncolor2017@gmail.com</a></li>
 						<li>678 22 30 32</li>
 						<li>Calle Alerce 11</li>
 						<li>28041, Madrid</li>
@@ -487,9 +488,9 @@ Recomiendo ir a tod@S, si quieren recibir un trato agradable y salir content@s ‚
 					<div class="social-links">
 						<ul class="list-unstyled d-flex justify-content-start justify-content-md-end flex-wrap gap-3">
 							<li>
-								<a href="#" class="text-secondary">
+								<a href="https://www.facebook.com/doncoloresteticaypeluqueria?locale=es_ES" class="text-secondary">
 									<svg width="24" height="24" viewBox="0 0 24 24">
-										<use xlink:href="https://www.facebook.com/doncoloresteticaypeluqueria?locale=es_ES"></use>
+										<use xlink:href="#facebook"></use>
 									</svg>
 								</a>
 							</li>
@@ -501,17 +502,17 @@ Recomiendo ir a tod@S, si quieren recibir un trato agradable y salir content@s ‚
 								</a>
 							</li>
 							<li>
-								<a href="#" class="text-secondary">
+								<a href="https://www.instagram.com/peluqueria_doncolor/" class="text-secondary">
 									<svg width="24" height="24" viewBox="0 0 24 24">
-										<use xlink:href="https://www.instagram.com/peluqueria_doncolor/"></use>
+										<use xlink:href="#instagram"></use>
 									</svg>
 								</a>
 							</li>
 						</ul>
 					</div>
 				</div>
-				<div class="col-6 col-md-2">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3039.857299728319!2d-3.695486850030624!3d40.36768838830429!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4226f978ec8111%3A0x62461c2700b496b!2sDon%20Color!5e0!3m2!1ses!2ses!4v1727969192054!5m2!1ses!2ses" width="1000" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				<div class=" col-md-6">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3039.857299728319!2d-3.695486850030624!3d40.36768838830429!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4226f978ec8111%3A0x62461c2700b496b!2sDon%20Color!5e0!3m2!1ses!2ses!4v1727969192054!5m2!1ses!2ses" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 				</div>				
 			</div>
 
