--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
 		rel="stylesheet">
+	<link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
 
 </head>
 
@@ -213,19 +214,22 @@
 		<div class="container">
 			<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 g-5 m-2 m-md-0 p-2 p-md-5 bg-black">
 				<div class="col m-0">
-				  <div class="mt-3">
+				  <div class="mt-3  text-center">
+					<span class="icon flaticon-hair-dryer display-3  mb-4 d-block" style="color:white"></span>
 					<h4 class="fw-bold mb-2">Recogidos para Eventos</h4>
 					<p class="text-white">¿Tienes un evento especial? Nuestros recogidos son elegantes y sofisticados, diseñados para realzar tu belleza en bodas, fiestas o cualquier celebración. Nos especializamos en estilos duraderos que se adaptan a la temática de tu evento y a tu estilo personal.</p>
 				  </div>
 				</div>
 				<div class="col m-0">
-				  <div class="mt-3">
+				  <div class="mt-3  text-center">
+				  <span class="icon flaticon-spray display-3  mb-4 d-block" style="color:white"></span>
 					<h4 class="fw-bold mb-2">Tintes y Decoloraciones</h4>
 					<p class="text-white">Realizamos coloraciones profesionales, desde tonos naturales hasta las tendencias más atrevidas. Si buscas renovar tu look con un tinte, reflejos o una decoloración, nuestro equipo de expertos te garantizará un acabado impecable, cuidando la salud de tu cabello en cada paso.</p>
 				  </div>
 				</div>
 				<div class="col m-0">
-				  <div class="mt-3">
+				  <div class="mt-3 text-center">
+				  <span class="icon flaticon-shave display-3  mb-4 d-block" style="color:white"></span>
 					<h4 class="fw-bold mb-2">Maquillaje para Eventos</h4>
 					<p class="text-white">Nuestro servicio de maquillaje profesional te hará brillar en cualquier ocasión. Ya sea para una boda, una fiesta o un evento importante, creamos el maquillaje ideal que resalta tus facciones y se adapta perfectamente a tu estilo.</p>
 				  </div>
